[gd_scene load_steps=2 format=3 uid="uid://cx3p2yicy1tgd"]

[ext_resource type="Script" path="res://Scripts/skill/Inventory/Skill_Item.gd" id="2_a1lik"]

[node name="Skill_item" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_a1lik")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -136.0
offset_top = 18.0
offset_right = 218.0
offset_bottom = 183.0
mouse_filter = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "OLLAAAcuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuwwwwwwwwww"
autowrap_mode = 1
clip_text = true
uppercase = true
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
